--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,28 @@
 # pip install -r requirements.txt
 
 streamlit
+backports.functools-lru-cache==1.5
+cloudpickle==1.2.1
+cycler==0.10.0
+decorator==4.4.0
+easydict==1.9
+future==0.17.1
+kiwisolver==1.1.0
+matplotlib==2.2.4
+networkx==2.2
+nltk==3.4.3
+numpy==1.16.4
+pandas==0.24.2
+Pillow==6.0.0
+pyparsing==2.4.0
+python-dateutil==2.8.0
+pytz==2019.1
+PyWavelets==1.0.3
+PyYAML==5.1.1
+scikit-image==0.14.3
+scipy==1.2.2
+singledispatch==3.4.0.3
+six==1.12.0
+subprocess32==3.5.4
+torch==1.1.0
+torchvision==0.3.0
